--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ attrs==25.3.0
 base58==2.1.1
 based58==0.1.1
 billiard==4.2.1
+psycopg2-binary==2.9.9
+
 borsh-construct==0.1.0
 cachetools==4.2.4
 celery==5.5.3
